--- a/opmaak.css
+++ b/opmaak.css
@@ -2,3 +2,8 @@ body {
 background-color: forestgreen;
 opacity: 0,7;
 a.inset {border-style: inset;}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
