--- a/opmaak.css
+++ b/opmaak.css
@@ -4,6 +4,15 @@ opacity: 0,7;
 a.inset {border-style: inset;}
 ul {
     list-style-type:lower-greek ;
-    margin: 50;
+    margin: 0;
     padding: 0;
+  }
+  li {
+    float: left;
+  }
+  
+  a {
+    display: block;
+    padding: 8px;
+    background-color: #dddddd;
   }
