--- a/opmaak.css
+++ b/opmaak.css
@@ -2,7 +2,7 @@ body {
 background-color: forestgreen;
 opacity: 0,7;}
 ul {
-    list-style-type:lower-greek ;
+    list-style-type:none ;
     margin: 0;
     padding: 0;
   }
