--- a/opmaak.css
+++ b/opmaak.css
@@ -26,3 +26,10 @@ ul {
   right: 75px;
   font-size: 18px;
 }
+.titel {
+  position: absolute;
+  top: 30%;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+}
