--- a/opmaak.css
+++ b/opmaak.css
@@ -35,3 +35,9 @@ ul {
   text-align: center;
   font-size: 20px;
 }
+.tekst1 {
+  position: absolute;
+  margin-top: 100px;
+  left: 16px;
+  font-size: 18px;
+}
