--- a/opmaak.css
+++ b/opmaak.css
@@ -48,3 +48,8 @@ ul {
   text-align: center;
   font-size: 20px;
 }
+.binair {
+  position: absolute;
+  top: 200px;
+  right: 75px;
+  font-size: 18px;
